[package]
name = "bip39_recovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.0"
bip39 = "2.1.0"
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
rayon = "1.8.0"
anyhow = "1.0.75"
hex_lit = "0.1.1"
cuda = { version = "0.4.0-pre.2", optional = true, features = ["cuda_10_0"] }
secp256k1 = "0.6.0"
patricia_tree = "0.9.0"
num_cpus = "1.17"

[features]
cuda = ["dep:cuda"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'
strip = true