[package]
name = "bip39_recovery"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.2"
bip39 = "2.2.0"
clap = { version = "4.5.9", features = ["derive"] }
indicatif = "0.17.8"
rayon = "1.11.0"
anyhow = "1.0.86"
hex_lit = "0.1.1"
cuda = { version = "0.4.0-pre.2", optional = true, features = ["cuda_10_0"] }
secp256k1 = "0.6.0"
patricia_tree = "0.9.0"
num_cpus = "1.17"
log = "0.4.22"
simplelog = "0.12.2"
ocl = "0.19"
itertools = "0.13.0"
ctrlc = { version = "3.4.5", features = ["termination"] }

[features]
cuda = ["dep:cuda"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'
strip = true