[package]
name = "bip39_recovery"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.31.2", features = ["no-std"] }
bip39 = "2.2.0"
rayon = "1.11.0"
simplelog = "0.12.2"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
patricia_tree = "0.6.0"
indicatif = "0.17.8"
itertools = "0.13.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
secp256k1 = { version = "0.28.2", default-features = false, features = ["hashes", "rand"] }
log = "0.4.22"